# k8s-sts-and-pv

./: Makefile  README.md  docker-compose.yml  manifest.yml
k8s-sts-and-pv-backend/: Dockerfile  Makefile  config.json  pyproject.toml
k8s-sts-and-pv-backend/k8s_sts_and_pv_backend/: __init__.py
k8s-sts-and-pv-web/: Dockerfile  config.json  pyproject.toml
k8s-sts-and-pv-web/k8s_sts_and_pv_web/: __init__.py
